[package]
name = "test-windows-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2.0.0-beta.5"
napi-derive = "2.0.0-beta.5"

[build-dependencies]
napi-build = "1"

[dependencies.windows]
version = "0.28.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]